--- a/project/templates/info.html
+++ b/project/templates/info.html
@@ -13,6 +13,7 @@
     <a href="../todo/"> Home </a>
     <a href="../input/">Credit Analysis Machine</a>
     <a href="../info/">Why Blockchain?</a>
+    <a href="projectPage.html">Project</a>
     <b href="#" id="signout-button" class = "signout-button">Sign Out</b>
   </div>
   <script>
