--- a/project/templates/display.html
+++ b/project/templates/display.html
@@ -1,169 +1,137 @@
+
+
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<script src = "../js/bundle.js"></script>  
-	<p style="text-align: center">
-		<a href= "HelloWorld.html" id= "h1TAG" class ="header"> AI Credit </a>
-	</p>
-	<div class="topnav" id="myHeader">
-    <a href="../projectPage/"> Home </a>
-    <a href="../input/">Credit Analysis Machine</a>
-    <a href="../info/">Why Blockchain?</a>
-    <b href="#" id="signout-button" class = "signout-button">Sign Out</b>
-  </div>
-  <div class= "form">
- <p style= "text-align: center" id = "h2TAG"> {{userdata}}
-</p> 
- 
-</div>
-<style type="text/css">
-		#pic{
-	visibility: hidden;
-}
-#bool{
-	color: white;
-}
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-#h1TAG{
-	color:orange;
-	font-size: 50px;
-	text-decoration: none;
-}
-#xxx {
-	font-size: 100px;
-	font-family: verdana;
-}
-#h2TAG{
-	font-family: Helvetica, SF Pro Display, Verdana, Geneva, Tahoma, sans-serif;
-	padding: 50px;
-}
-.list{
-	color:green;
-	font-family: "Courier New", Times, serif;
-}
-.header{
-    padding: 10px;
-	text-align: center;
-	font-family: "Arial Black", Gadget, sans-serif;
-}
-.topnav {
-    overflow: hidden;
-	background-color: black;
-}
-.sticky {
-	position: fixed;
-	top: 0;
-	width: 99%;
-  }
+	<title>AI Credit</title>
 
-.sticky + .topnav {
-	padding-top: 10000000000px;
- }
+	<!-- Google font -->
+		<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
 
-/* Style the topnav links */
-.topnav a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-  
-}
+	<!-- Bootstrap -->
+	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/owl.carousel.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/owl.theme.default.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/magnific-popup.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
-.topnav a:hover {
-    background-color: yellow;
-    color: black;
-}
-.topnav b {
-    float: right;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-  
-}
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+</head>
 
-.topnav b:hover {
-    background-color: yellow;
-    color: black;
-}
-.body{
-	font-size: 40px;
-	font-family: Helvetica, SF Pro Display, Verdana, Geneva, Tahoma, sans-serif;
-	margin: 50px;
-}
-.row{
-	border: 1px solid black;
-    display: inline-block;
-    float: left;
-    padding: 5px;
-    font-size: 30px;
-}
-.form{
-	font-size: 30px;
-	font-family: Helvetica, SF Pro Display, Verdana, Geneva, Tahoma, sans-serif;
-}
-img{
-	height: 50%;
-	width: 50%;
-	transition: width 2s, height 4s;
-}
-/*img:hover{
-	height: 100%;
-	width: 53%;
-	z-index:5;
-}*/
+<body>
+	<!-- Header -->
+	
+		
+		<!-- /Background Image -->
 
-.center {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%;
-  }
+		<!-- Nav -->
+		<nav >
+			<div class="navbar-brand">
+						<a href="../projectPage">
+							<img class="logo" src="{% static 'img/white1.png' %}" alt="logo">
+							
+						</a>
+					</div>
+			<div class="container">
 
-input{
-	margin-bottom: 1em;
-	display:block;
-}
-button{
-	display:block;
-}
-/*option{
-	display:block;
-}
-button.hover{
-	z-index: 10;
-}*/
+				<div class="navbar-header">
+					<!-- Logo -->
+					
+					<!-- /Logo -->
 
-table{
-margin-left: 500px;
-border: 5px solid red;
+					<!-- Collapse nav button -->
+					<div class="nav-collapse">
+						<span></span>
+					</div>
+					<!-- /Collapse nav button -->
+				</div>
 
-font-size:50px;
+				<!--  Main navigation  -->
+			
+				<ul class="main-nav nav navbar-nav navbar-right">
+					<li><a href="/projectPage">Home</a></li>
+					<li><a href="/projectPage">About the Algorithm</a></li>
+					<li><a href="/projectPage">Why Blockstack</a></li>
+					<li><a href="/projectPage">Team</a></li>
+					<li><a href = "/projectPage">Contact</a></li>
+				</ul>
+		
+				<!-- /Main navigation -->
 
-}
+			</div>
+		</nav>
+		<!-- /Nav -->
 
-#holder{
-	position: relative;
-	display: inline-block;
-	border-bottom: 1px dotted black;
-}
+	
 
-#holder .tooltiptext{
-visibility: hidden;
-width: 120px;
-text-align: center;
-border-radius: 5px;
-position: absolute;
-z-index: 1;
-}
 
-#holder:hover #submit .tooltiptext{
-	visibility: visible;
-}
-	</style>
+	
+	
+	<!-- Contact -->
+	<div id="contact" class="section md-padding">
+
+		<!-- Container -->
+		<div class="container">
+
+			<!-- Row -->
+			<div class="row">
+
+				<!-- Section-header -->
+				<div class="section-header text-center">
+					<h2 class="title">Your score is {{userdata}}</h2>
+				</div>
+				<!-- /Section-header -->
+
+			
+				<!-- /contact -->
+
+				<!-- contact form -->
+				
+				<!-- /contact form -->
+
+			</div>
+			<!-- /Row -->
+
+		</div>
+		<!-- /Container -->
+
+	</div>
+	<!-- /Contact -->
+
+
+	
+
+	<!-- Back to top -->
+	<div id="back-to-top"></div>
+	<!-- /Back to top -->
+
+	<!-- Preloader -->
+	
+	<!-- /Preloader -->
+
+	<!-- jQuery Plugins -->
+	<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/owl.carousel.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/jquery.magnific-popup.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+
+
 
 </body>
+
 </html>
