--- a/project/templates/creditinput.html
+++ b/project/templates/creditinput.html
@@ -75,7 +75,9 @@
 </div>
 </nav>
 <!-- /Nav -->
-
+<script type="text/javascript">
+	console.log(window.location.origin)
+</script>
 
 <script>
 function checkForm(){
